@@ -59,6 +59,8 @@ import org.sakaiproject.event.api.EventTrackingService;
 import org.sakaiproject.event.api.NotificationService;
 import org.sakaiproject.exception.IdUnusedException;
 import org.sakaiproject.exception.PermissionException;
+import org.sakaiproject.scoringservice.api.ScoringAgent;
+import org.sakaiproject.scoringservice.api.ScoringService;
 import org.sakaiproject.shortenedurl.api.ShortenedUrlService;
 import org.sakaiproject.site.api.Site;
 import org.sakaiproject.site.api.SitePage;
@@ -97,6 +99,7 @@ public class SiteManageServiceImpl implements SiteManageService {
     @Setter private EventTrackingService eventTrackingService;
     @Setter private LinkMigrationHelper linkMigrationHelper;
     @Setter private PreferencesService preferencesService;
+    @Setter private ScoringService scoringService;
     @Setter private SecurityService securityService;
     @Setter private ServerConfigurationService serverConfigurationService;
     @Setter private SessionManager sessionManager;
@@ -139,6 +142,13 @@ public class SiteManageServiceImpl implements SiteManageService {
     @Override
     public boolean importToolsIntoSiteThread(final Site site, List<String> existingTools, Map<String, List<String>> importTools, Map<String, Map<String, List<String>>> toolItemMap, Map<String, Map<String, List<String>>> toolOptions, final boolean cleanup) {
 
+        return importToolsIntoSiteThread(site, existingTools, importTools, toolItemMap, toolOptions, cleanup, null);
+    }
+
+    private boolean importToolsIntoSiteThread(final Site site, List<String> existingTools, Map<String, List<String>> importTools,
+            Map<String, Map<String, List<String>>> toolItemMap, Map<String, Map<String, List<String>>> toolOptions,
+            final boolean cleanup, String scoringSourceSiteId) {
+
         final User user = userDirectoryService.getCurrentUser();
         final Locale locale = preferencesService.getLocale(user.getId());
         final Session session = sessionManager.getCurrentSession();
@@ -162,13 +172,19 @@ public class SiteManageServiceImpl implements SiteManageService {
             }
             eventTrackingService.post(eventTrackingService.newEvent(SiteService.EVENT_SITE_IMPORT_START, importSites, id, false, NotificationService.NOTI_OPTIONAL));
 			
-			// Reflects only that importToolsIntoSite returned without throwing. transferCopyEntities
+			// Reflects only that the import and optional scoring copy returned without throwing. transferCopyEntities
             // logs and swallows individual EntityProducer failures, so a partial import still
             // counts as succeeded here.
             boolean importSucceeded = false;
 			try {
                 log.info("Started Site Import for the site {}", id);
                 importToolsIntoSite(site, existingTools, importTools, toolItemMap, toolOptions, cleanup);
+                if (scoringSourceSiteId != null) {
+                    ScoringAgent agent = scoringService.getDefaultScoringAgent();
+                    if (agent != null && agent.isEnabled(scoringSourceSiteId, null)) {
+                        agent.transferScoringComponentAssociations(scoringSourceSiteId, id);
+                    }
+                }
                 importSucceeded = true;
                 log.info("Finished Site Import for the site {}", id);
             } catch (Exception e) {
@@ -218,44 +234,8 @@ public class SiteManageServiceImpl implements SiteManageService {
                 securityService.pushAdvisor(securityAdvisor);
             }
 
-            // A full-site copy is the same import as Site Info with every tool and option selected.
-            // Use the destination placements so site-creation tool exclusions remain effective.
-            Set<String> toolIds = new LinkedHashSet<>();
-            for (SitePage page : site.getPages()) {
-                for (ToolConfiguration tool : page.getTools()) {
-                    if (StringUtils.isNotBlank(tool.getToolId())) {
-                        toolIds.add(tool.getToolId());
-                    }
-                }
-            }
-
-            // Site Info also offers site information when no Overview placement is present.
-            if (serverConfigurationService.getBoolean("site-manage.importoption.siteinfo", true)) {
-                toolIds.add(SiteManageConstants.SITE_INFO_TOOL_ID);
-            }
-
-            Map<String, List<String>> importTools = new HashMap<>();
-            Map<String, Map<String, List<String>>> toolOptions = new HashMap<>();
-            for (String toolId : toolIds) {
-                importTools.put(toolId, List.of(oSiteId));
-            }
-            for (EntityProducer producer : entityManager.getEntityProducers()) {
-                if (producer instanceof EntityTransferrer) {
-                    EntityTransferrer transferrer = (EntityTransferrer) producer;
-                    String[] supportedTools = transferrer.myToolIds();
-                    if (supportedTools != null) {
-                        for (String toolId : supportedTools) {
-                            if (toolIds.contains(toolId)) {
-                                transferrer.getTransferOptions().ifPresent(options ->
-                                    toolOptions.put(toolId, Map.of(oSiteId, new ArrayList<>(options))));
-                            }
-                        }
-                    }
-                }
-            }
-
-            // Replace the cloned placements/content, including tools that recreate their own pages.
-            importToolsIntoSite(site, new ArrayList<>(toolIds), importTools, Collections.emptyMap(), toolOptions, true);
+            FullSiteImport selection = selectAllTools(oSiteId, site);
+            importToolsIntoSite(site, selection.toolIds(), selection.importTools(), Collections.emptyMap(), selection.toolOptions(), true);
         } catch (Exception e) {
             log.warn("Error importing all tools from site {} to site {}", oSiteId, nSiteId, e);
         } finally {
@@ -264,6 +244,56 @@ public class SiteManageServiceImpl implements SiteManageService {
             }
         }
     }
+
+    @Override
+    public boolean importAllToolsIntoSiteThread(String fromSiteId, Site site, boolean copyScoringData) {
+        FullSiteImport selection = selectAllTools(fromSiteId, site);
+        return importToolsIntoSiteThread(site, selection.toolIds(), selection.importTools(), Collections.emptyMap(),
+            selection.toolOptions(), true, copyScoringData ? fromSiteId : null);
+    }
+
+    private FullSiteImport selectAllTools(String fromSiteId, Site site) {
+        // A full-site copy is the same import as Site Info with every tool and option selected.
+        // Use the destination placements so site-creation tool exclusions remain effective.
+        Set<String> toolIds = new LinkedHashSet<>();
+        for (SitePage page : site.getPages()) {
+            for (ToolConfiguration tool : page.getTools()) {
+                if (StringUtils.isNotBlank(tool.getToolId())) {
+                    toolIds.add(tool.getToolId());
+                }
+            }
+        }
+
+        // Site Info also offers site information when no Overview placement is present.
+        if (serverConfigurationService.getBoolean("site-manage.importoption.siteinfo", true)) {
+            toolIds.add(SiteManageConstants.SITE_INFO_TOOL_ID);
+        }
+
+        Map<String, List<String>> importTools = new HashMap<>();
+        Map<String, Map<String, List<String>>> toolOptions = new HashMap<>();
+        for (String toolId : toolIds) {
+            importTools.put(toolId, List.of(fromSiteId));
+        }
+        for (EntityProducer producer : entityManager.getEntityProducers()) {
+            if (producer instanceof EntityTransferrer) {
+                EntityTransferrer transferrer = (EntityTransferrer) producer;
+                String[] supportedTools = transferrer.myToolIds();
+                if (supportedTools != null) {
+                    for (String toolId : supportedTools) {
+                        if (toolIds.contains(toolId)) {
+                            transferrer.getTransferOptions().ifPresent(options ->
+                                toolOptions.put(toolId, Map.of(fromSiteId, new ArrayList<>(options))));
+                        }
+                    }
+                }
+            }
+        }
+
+        return new FullSiteImport(new ArrayList<>(toolIds), importTools, toolOptions);
+    }
+
+    private record FullSiteImport(List<String> toolIds, Map<String, List<String>> importTools,
+            Map<String, Map<String, List<String>>> toolOptions) {}
 
     @Override
     public boolean isAddMissingToolsOnImportEnabled() {
